objects/project_cloud__Quick_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Load_Override__c</fullName>
        <label>Load (Override)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project__c</fullName>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Quick Allocations</relationshipLabel>
        <relationshipName>Quick_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>project_cloud__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quick_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Work_Type__c</fullName>
        <label>Work Type</label>
        <referenceTo>project_cloud__Work_Type__c</referenceTo>
        <relationshipLabel>Quick Allocations</relationshipLabel>
        <relationshipName>Quick_Allocations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Quick Allocation</label>
    <nameField>
        <displayFormat>QA-{0000000000}</displayFormat>
        <label>Quick Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quick Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>